2008-03-31  smeghead <smeghead@users.sourceforge.jp>

    * hook機能で外部プログラムに渡すjsonのエスケープ方法が間違っていたのを修正
    した。" より、先に、\をエスケープする必要があったため。

2008-03-30  smeghead <smeghead@users.sourceforge.jp>

    * string_appendf(フォーマット指定文字列追加関数)を追加した。

2008-03-30  smeghead <smeghead@users.sourceforge.jp>

    * 0.2.2-beta リリース

2008-02-28  smeghead <smeghead@users.sourceforge.jp>

    * hook機能で外部プログラムに渡すjsonのエスケープ方法が間違っていたのを修正
    した。" を "" にエスケープしてたのを、 \" に変更した。

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * 複数行入力エリア(<textarea>)の値の出力に、値用のエスケープ処理を行なって
    いたのを、HTML用のエスケープ処理に変更した。

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * 0.2.1-beta リリース

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * hook機能へjsonを送るときに改行コードを\nに変換するようにした。

2008-03-24  smeghead <smeghead@users.sourceforge.jp>

    * 一番後ろの項目を削除後、項目の追加を行なった場合にエラーが発生する問題を
    修正した。
    * テーブルレイアウトの変更。古いdbからの移行を行なうには、下のコマンドを実行し
    てください。
    $ cd db
    $ echo 'alter table element_type add column deleted integer not null default 0;' | sqlite3 starbug1.db

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * basic認証のユーザ名を投稿者にデフォルト表示するのをやめた。

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.6-beta リリース

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * cssの調整。

2008-03-19  smeghead <smeghead@users.sourceforge.jp>

    * simple_string.cで、realloc時のサイズ指定を修正。

2008-03-18  smeghead <smeghead@users.sourceforge.jp>

    * strcatを使用している部分を、simple_stringを使用するように修正した。
    * stackに1Mのバッファを取っている部分を、ヒープに確保するように変更した。

2008-03-14  smeghead <smeghead@users.sourceforge.jp>

    * 入力フォームの下に、複数行テキスト項目での、他チケットリンクとpre記法に
    ついての説明を追加した。ヘルプにも追記した。
    * 日付項目の入力支援のcalendarのバグを修正した。
    * ナビゲーションメニューの状態別チケットを状態別チケット一覧に変更した。
    * チケットの最新情報の色を変更した。

2008-03-13  smeghead <smeghead@users.sourceforge.jp>

    * 入力フィールドにmaxlengthの指定を追加した。
    * デザインをシンプルに変更した。

2008-03-07  smeghead <smeghead@users.sourceforge.jp>

    * 簡易可変文字列ユーティリティを追加した。
